--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-	<meta name="description" content="ホームページサンプル株式会社の取り組み - ホームページサンプル株式会社のサイトです">
-	<title>ホームページサンプル株式会社の取り組み | ホームページサンプル株式会社</title>
+	<meta name="description" content="NEWCREATE株式会社の取り組み">
+	<title>NEWCREATE株式会社の取り組み| ホームページサンプル株式会社</title>
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="stylesheet" type="text/css" media="all" href="style.css">
 	<!--[if lt IE 9]>
